# s2protocol-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  lastcmd  requirements.txt
assets/: 2023-04-08-2v2AI.SC2Replay  FieldsDeath202507.SC2Replay  SC2-Patch_4.12-2v2AI.SC2Replay
assets/BalanceData/94137/: ATALaserBatteryLMWeapon.json  ATSLaserBatteryLMWeapon.json  AberrationACGluescreenDummy.json  AccelerationZoneFlyingLarge.json  AccelerationZoneFlyingMedium.json  AccelerationZoneFlyingSmall.json  AccelerationZoneLarge.json  AccelerationZoneMedium.json  AccelerationZoneSmall.json  AcidSalivaWeapon.json  AcidSpinesWeapon.json  Adept.json  AdeptFenixACGluescreenDummy.json  AdeptPhaseShift.json  AdeptPiercingWeapon.json  AdeptUpgradeWeapon.json  AdeptWeapon.json  AiurLightBridgeAbandonedNE10.json  AiurLightBridgeAbandonedNE10Out.json  AiurLightBridgeAbandonedNE12.json  AiurLightBridgeAbandonedNE12Out.json  AiurLightBridgeAbandonedNE8.json  AiurLightBridgeAbandonedNE8Out.json  AiurLightBridgeAbandonedNW10.json  AiurLightBridgeAbandonedNW10Out.json  AiurLightBridgeAbandonedNW12.json  AiurLightBridgeAbandonedNW12Out.json  AiurLightBridgeAbandonedNW8.json  AiurLightBridgeAbandonedNW8Out.json  AiurLightBridgeNE10.json  AiurLightBridgeNE10Out.json  AiurLightBridgeNE12.json  AiurLightBridgeNE12Out.json  AiurLightBridgeNE8.json  AiurLightBridgeNE8Out.json  AiurLightBridgeNW10.json  AiurLightBridgeNW10Out.json  AiurLightBridgeNW12.json  AiurLightBridgeNW12Out.json  AiurLightBridgeNW8.json  (+1018 more)
assets/BalanceData/95248/: AccelerationZoneFlyingLarge.json  AccelerationZoneFlyingMedium.json  AdeptPhaseShift.json  AdeptUpgradeWeapon.json  AdeptWeapon.json  AiurLightBridgeAbandonedNE8.json  AiurLightBridgeNE10Out.json  AiurLightBridgeNE12.json  AiurLightBridgeNE8.json  AiurLightBridgeNE8Out.json  AiurLightBridgeNW8Out.json  AiurTempleBridgeDestructibleNE12Out.json  AiurTempleBridgeDestructibleSE8Out.json  AiurTempleBridgeDestructibleSW8Out.json  AiurTempleBridgeNE12Out.json  AiurTempleBridgeNE8Out.json  Archon.json  ArchonACGluescreenDummy.json  Armory.json  Assimilator.json  AssimilatorRich.json  AutoTestAttacker.json  AutoTurret.json  BansheeACGluescreenDummy.json  BarracksFlying.json  BarracksTechLab.json  BeaconCustom4.json  BeaconDetect.json  BeaconHarass.json  Beacon_Nova.json  Beacon_Terran.json  Beacon_TerranSmall.json  Beacon_Zerg.json  BileLauncherACGluescreenDummy.json  BlasterBillyACGluescreenDummy.json  BroodLord.json  Broodling.json  BunkerDepotMengskACGluescreenDummy.json  Carrier.json  ChangelingZealot.json  (+245 more)
assets/BalanceData/95299/: ATSLaserBatteryLMWeapon.json  AberrationACGluescreenDummy.json  AccelerationZoneSmall.json  AcidSalivaWeapon.json  AdeptFenixACGluescreenDummy.json  AiurLightBridgeAbandonedNE8Out.json  AiurLightBridgeAbandonedNW10.json  AiurLightBridgeAbandonedNW12.json  AiurLightBridgeAbandonedNW8.json  AiurLightBridgeAbandonedNW8Out.json  AiurLightBridgeNW10.json  AiurLightBridgeNW12Out.json  AiurLightBridgeNW8.json  AiurTempleBridgeDestructibleNE8Out.json  AiurTempleBridgeDestructibleNW12Out.json  AiurTempleBridgeNW12Out.json  Anteplott.json  ArbiterMP.json  AssimilatorRich.json  AutoTestAttackTargetAir.json  AutoTestAttackTargetGround.json  AutoTurretReleaseWeapon.json  BanelingACGluescreenDummy.json  Banshee.json  BattleStationMineralField.json  BattleStationMineralField750.json  BeaconCustom1.json  BeaconCustom2.json  BeaconDefend.json  BeaconIdle.json  BeaconScout.json  BlackOpsMissileTurretACGluescreenDummy.json  BraxisAlphaDestructible1x1.json  BroodLordBWeapon.json  BroodLordWeapon.json  BunkerACGluescreenDummy.json  BunkerUpgradedACGluescreenDummy.json  BypassArmorDrone.json  CarrierAiurACGluescreenDummy.json  CarrierFenixACGluescreenDummy.json  (+236 more)
assets/BalanceData/95841/: AccelerationZoneFlyingSmall.json  AcidSpinesWeapon.json  AiurLightBridgeAbandonedNE12.json  AiurLightBridgeNE10.json  AiurTempleBridgeNW10Out.json  BanelingBurrowed.json  BeaconClaim.json  BeaconExpand.json  Beacon_Protoss.json  Beacon_ProtossSmall.json  BlimpMengskACGluescreenDummy.json  BraxisAlphaDestructible2x2.json  CarrierACGluescreenDummy.json  CarrionBird.json  CollapsibleRockTowerDebrisRampRight.json  CollapsibleRockTowerDiagonal.json  ColossusFenixACGluescreenDummy.json  ColossusPurifierACGluescreenDummy.json  CreepBlocker1x1.json  CreepTumorMissile.json  CreeperHostACGluescreenDummy.json  CycloneACGluescreenDummy.json  DesertPlanetStreetlight.json  DestructibleCityDebris2x4Horizontal.json  DestructibleCityDebris4x4.json  DestructibleCityDebrisHugeDiagonalULBR.json  DestructibleDebris4x4.json  DestructibleIce2x6Horizontal.json  DestructibleRock2x6Horizontal.json  DestructibleRockEx12x6Horizontal.json  DestructibleStoreFrontCityProps.json  DevourerACGluescreenDummy.json  DevourerMPWeaponMissile.json  EMP2Weapon.json  Elsecaro_Colonist_Hut.json  (+65 more)
examples/: full.rs  map.rs
examples/cli/: cmd_get.rs  mod.rs
examples/tui/: mod.rs
jupyter_notebooks/: Basic-Unit-Queries.ipynb  Basic-UnitBorn-Queries.ipynb  functime.ipynb
src/: arrow.rs  bit_packed_decoder.rs  cli.rs  common.rs  details.rs  dir_stats.rs  error.rs  filters.rs  game_events.rs  generator.rs  init_data.rs  lib.rs  main.rs  message_events.rs  protocol_version_decoder.rs  state.rs  tracker_events.rs  versioned_decoder.rs
src/arrow/: ipc_writer.rs  mod.rs
src/arrow_store/: ipc_writer.rs  mod.rs
src/cache_handles/: document_header.rs  map_info.rs  mod.rs  t3_height_map.rs
src/cli/: cmd_get.rs  cmd_scan.rs  mod.rs
src/game_events/: ability.rs  iterator.rs  mod.rs  state.rs
src/generator/: decoder_type.rs  mod.rs  proto_morphist.rs  stableid_ability_parser.rs  versionless.rs
src/init_data/: arrow_store.rs  mod.rs
src/state/: mod.rs  unit_cmd.rs  unit_props.rs
src/tracker_events/: arrow.rs  iterator.rs  mod.rs  player_setup.rs  player_stats.rs  player_upgrade.rs  state.rs  unit_born.rs  unit_died.rs  unit_done.rs  unit_init.rs  unit_owner_change.rs  unit_positions.rs  unit_type_change.rs
src/tui/: mod.rs
src/versions/: mod.rs  protocol99999.template
tests/: Burrow.SC2Replay  integration_test.rs
(+450 files in other folders)
