[package]
name = "s2protocol"
description = "A parser for Starcraft II - Replay format, exports to different target formats"
version = "3.2.0"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sebosp/s2protocol-rs"
keywords = ["sc2replay", "polars", "arrow", "starcraft2", "mpq"]
categories = ["games", "parsing"]

[dependencies]
nom-mpq = "2.0.4"
nom = "8.0.0"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
convert_case = "0.8"
colored = "3.0"
arrow = { version = "55", optional = true }
arrow_convert = { version = "0.9.0", optional = true }
sha256 = { version = "1.6", default-features = false }
rayon = { version = "1.10", optional = true }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
bat = { version = "0.25.0", optional = true }
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.28.1", optional = true }
color-eyre = { version = "0.6", optional = true }
itertools = { version = "0.14", optional = true }

[features]
default = ["dep_arrow", "dep_ratatui"]
# A feature that allows extra tracing, disabled by default because of performance
dep_arrow = ["arrow", "arrow_convert", "rayon"]
tracing_off = ["tracing/max_level_off", "tracing/release_max_level_off"]
tracing_trace_level = [
  "tracing/max_level_trace",
  "tracing/release_max_level_trace",
]
tracing_debug_level = [
  "tracing/max_level_debug",
  "tracing/release_max_level_debug",
]
tracing_info_level = [
  "tracing/max_level_info",
  "tracing/release_max_level_info",
]
syntax = ["bat", "color-eyre"]
dep_ratatui = ["ratatui", "crossterm", "color-eyre", "itertools"]

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
