[package]
name = "s2protocol"
description = "A parser for Starcraft II - Replay format, exports to different target formats"
version = "3.5.4"
authors = ["Seb Ospina <kraige@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sebosp/s2protocol-rs"
keywords = ["sc2replay", "polars", "arrow", "starcraft2", "mpq"]
categories = ["games", "parsing"]

[dependencies]
nom-mpq = "2.0.8"
nom = "8.0"
thiserror = "2"
tracing = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
convert_case = "0.11"
arrow = { version = "57", optional = true }
arrow_convert = { version = "0.11.0", optional = true }
sha256 = { version = "1.6", default-features = false }
rayon = "1.11"
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0"
serde-xml-rs = "0.8"
include_assets = "1.0.0"

[features]
default = ["dep_arrow", "tracing_info_level"]
# A feature that allows extra tracing, disabled by default because of performance
dep_arrow = ["arrow", "arrow_convert"]
tracing_off = [
  "tracing/max_level_off",
  "tracing/release_max_level_off",
  "nom-mpq/tracing_off",
]
tracing_debug_level = [
  "tracing/max_level_debug",
  "tracing/release_max_level_debug",
  "nom-mpq/tracing_debug_level",
]
tracing_info_level = [
  "tracing/max_level_info",
  "tracing/release_max_level_info",
  "nom-mpq/tracing_info_level",
]

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.6", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
color-eyre = "0.6"
itertools = "0.14"
tui-syntax-highlight = "0.2.0"
syntect = "5.3"
libc = "0.2"
